<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <!--menggunakan fitur textview, dengan diberi keterangan teksnya "Hello Sahabat Pena",
    diberi nama id yaitu helloSahabat,
    android:gravity center agar posisinya terletak di tengah-tengah,
    android textstyle="bold" yang bertujuan agar teksnya tebal-->
    <TextView
        android:id="@+id/helloSahabat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/hello_sahabat_pena"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gambarPena"
        app:layout_constraintVertical_bias="0.092" />

    <!--penambahan gambar dengan menggunakan imageView,
    berisi gambar dari rosource drawable,
    mengisi nama file dengan gambarpena.jpg, dengan content description Todo-->
    <ImageView
        android:id="@+id/gambarPena"
        android:layout_width="207dp"
        android:layout_height="187dp"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gambarpena"
        tools:ignore="ImageContrastCheck" />

    <!--menggunakan edittext plaintext, dengan diberi keterangan teksnya masukkan username-->
    <EditText
        android:id="@+id/teksPengguna"
        android:layout_width="252dp"
        android:layout_height="49dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="48dp"
        android:autofillHints="masukkan username"
        android:ems="10"
        android:hint="@string/masukkan_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloSahabat" />

    <!--menggunakan edittext password numeric, dengan diberi keterangan teksnya masukkan password-->
    <EditText
        android:id="@+id/teksPassword"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints="masukkan password"
        android:ems="10"
        android:hint="@string/masukkan_password"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teksPengguna" />

    <!--menggunakan fitur button, dengan diberi keterangan teksnya "login",
    margin topnya 250 dp dan marginbottom 20dp,
    android:gravity center agar posisinya terletak di tengah-tengah-->
    <Button
        android:id="@+id/tombolLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:gravity="center"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloSahabat"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>